--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/ask.js", "use": "@vercel/node" }
+    {
+      "src": "api/ask.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/ask", "dest": "api/ask.js" }
+    {
+      "src": "/api/ask",
+      "dest": "api/ask.js"
+    }
   ]
 }
