--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "iasupermercado",
   "version": "1.0.0",
-  "type": "module",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "groq-sdk": "latest"
+    "next": "14.2.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
+
 
